@@ -1,3 +1,8 @@
+2010-04-08  Martin Rubey  <martin.rubey@math.uni-hannover.de>
+
+	* contrib/emacs/fricas.el: add requirements for tab completion of
+	file names.
+
 2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/lib/sockio-c.c, src/include/sockio-c.H1,
